tests/samples/positive/types/tuple_basic.ax
module tuple_basic;

fn make_pair(value: i32) -> (i32, bool) {
    return (value, value > 0);
}

fn first[T, U](pair: (T, U)) -> T {
    return pair.0;
}

fn second[T, U](pair: (T, U)) -> U {
    return pair.1;
}

fn inc(value: i32) -> i32 {
    return value + 1;
}

fn main() -> i32 {
    let pair: (i32, bool) = make_pair(4);
    let (x, ok) = pair;
    let (_, flag) = pair;
    var (mutable_count, mutable_flag) = pair;
    mutable_count = mutable_count + 0;
    var pointer_source: i32 = 9;
    let pointer_value: *const i32 = &pointer_source;
    let bytes: [3]u8 = [1u8, 2u8, 3u8];
    let view: []const u8 = bytes[:];
    let triple: (i32, bool, u8) = (4, true, 7u8);
    let (triple_value, triple_ok, triple_byte) = triple;
    let complex: (*const i32, []const u8, fn(i32) -> i32) = (pointer_value, view, inc);
    let array_tuple: ([2]u8, i32) = ([1u8, 2u8], 3);
    let nested: ((i32, bool), (i32,)) = (pair, (x,));
    let ((left_value, left_ok), (single_value,)) = nested;
    let inferred = first(pair);

    if x == 4 && ok && flag && mutable_count == 4 && mutable_flag && pair.0 == 4 && pair.1 &&
        triple_value == 4 && triple_ok && triple_byte == 7u8 && complex.2(0) == 1 &&
        array_tuple.0[0] == 1u8 && array_tuple.1 == 3 &&
        left_value == 4 && left_ok && single_value == 4 && inferred == 4 && second(pair) {
        return 0;
    }
    return 1;
}
