tests/samples/negative/types/array_slice_bounds_order.ax
module array_slice_bounds_order;

fn main() -> i32 {
    let values: [3]i32 = [1, 2, 3];
    let reversed = values[2:1];
    return reversed[0];
}
